# one-code-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SPEC.md  package.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml
assets/skills/using-one-code-cli/: SKILL.md  skill.toml
assets/skills/using-one-code-cli/examples/: read-result.md  resume-session.md  run-with-agent.md  run-with-backend.md  run-with-cli.md  run-with-profile.md
npm/: install.js
src/: cli.rs  cli_defaults.rs  config.rs  config_ui.rs  documents.rs  error.rs  i18n.rs  ids.rs  main.rs  output.rs  run_record.rs  runner.rs  session.rs  skills.rs  vibe.rs
src/backend/: mod.rs
src/commands/: backends.rs  config_cmd.rs  doctor.rs  mod.rs  profiles.rs  runs.rs  sessions.rs  skills_cmd.rs
tests/: non_interactive_streaming.rs
