[package]
name = "one-code-cli"
version = "0.1.3"
edition = "2021"
description = "Unified Coding Agent CLI dispatcher"
license = "MIT"

[[bin]]
name = "occ"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
open = "5.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }
wait-timeout = "0.2"
colored = "2"
which = "6.0"
rustyline = "14"
